--- a/index.html
+++ b/index.html
@@ -6,20 +6,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>github by ziyo</title>
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/main.css">
+
 </head>
 <body>
   
+  <div class="container">
+
+  
+
   <h1>Hammaga salom bu ziyo va uning najot talim dagi birinchi demo git proekti</h1>
 
   <img
     src="https://avatars.mds.yandex.net/get-zen_doc/5221933/pub_61f7d20636b8df65fecafbac_61f7d4064a09d31ee775b9e6/scale_1200"
     alt="tesla" width="100" height="100">
 
+    
   <p>
     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea perferendis sunt placeat. Similique, nostrum
     reiciendis. Laboriosam soluta earum cumque quisquam placeat ut numquam, quaerat quia reprehenderit vel! Quos,
     temporibus reiciendis.
   </p>
+</div>
 </body>
 
 </html>
